<resources>
    <string name="app_name">ACost</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_add">+</string>
    <string name="key_del">DEL</string>

    <string name="add_packet">新的篮子</string>

    <string name="realCost">实际金额</string>
    <string name="originalCost">满减前金额</string>
    <string name="packet">%1$s号篮子</string>

    <string name="setting_advanced">高级模式</string>
    <string name="advanced_mode_tip">本功能暂时仅对作者本人开放</string>
    <string name="setting_dark_mode">黑暗模式</string>
    <string name="setting_language">语言</string>

    <string name="version">当前版本：%1$s</string>

    <string name="copyright">Product with love by GnayUil</string>
</resources>
